--- a/fullClean/appsettings.json
+++ b/fullClean/appsettings.json
@@ -1,6 +1,6 @@
 ﻿{
   "ConnectionStrings": {
-    "SqlServer": "Data Source=192.168.1.5;Database=fullCleanDev;User Id=sa;Password=fullclean22;"
+    "SqlServer": "Data Source=192.168.1.5;Database=fullClean_dev;User Id=sa;Password=fullclean22;"
   },
   "Logging": {
     "LogLevel": {
